plugins {
  id "application"
}

java {
  toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

application {
  mainClass = "lab.app.Application"

  applicationDefaultJvmArgs = [
      "-javaagent:../agent/build/libs/agent.jar",
      "--patch-module",
      "java.base=../profiler/build/libs/profiler.jar",
      "--add-exports",
      "java.base/lab.profiler=ALL-UNNAMED",
  ]
}

repositories {
  mavenCentral()
}

dependencies {
  runtimeOnly libs.asm
  runtimeOnly libs.asmUtil
  runtimeOnly libs.asmTree
}

tasks.named("run") {
  dependsOn(":agent:assemble")
  dependsOn(":profiler:assemble")
}
